<resources>
    <string name="app_name">Fukrey</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_post">Post</string>
    <string name="action_refresh">Refresh</string>
    <string name="search_hint">Enter User Name</string>
    <string name="action_range">Select Range</string>
    <string name="action_show_agree">Show Agree</string>
    <string name="action_show_disagree">Show Disagre</string>
    <string name="action_select_dp">Select DP</string>
    <string name="action_edit_post">Edit Post</string>
    <string name="action_switch_hide_loc">Switch Hide Location</string>

   <!-- <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_4</item>
        <item>@drawable/image_5</item>
        <item>@drawable/image_6</item>
        <item>@drawable/image_7</item>
        <item>@drawable/image_8</item>
        <item>@drawable/image_9</item>
    </string-array>-->
</resources>
