<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <!--  Refresh -->
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search" />

    <item android:id="@+id/action_select_dp"
        android:title="@string/action_select_dp"
        android:icon="@drawable/selectimage"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_range"
        android:title="@string/action_range"
        android:icon="@drawable/range"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <!-- Post will display always -->
    <item android:id="@+id/action_post"
        android:icon="@drawable/post"
        android:title="@string/action_post"
        android:orderInCategory="100"
        app:showAsAction="always"/>

</menu>
