<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".CommentActivity">


    <!-- Post will display always -->
    <item android:id="@+id/action_show_disagree"
        android:title="@string/action_show_disagree"
        android:icon="@drawable/showdisagree"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_show_agree"
        android:title="@string/action_show_agree"
        android:icon="@drawable/showagree"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_edit_post"
        android:title="@string/action_edit_post"
        android:icon="@drawable/post"
        android:orderInCategory="100"
        app:showAsAction="always"/>

</menu>
